     [FIX]          Configuration: dumpInfo() -> getInfo()
     [FIX]          ControlSlider doesn't support to set selected thumb sprite.
     [FIX]          ControlButton doesn't support to set scale ratio of touchdown state.
     [FIX]          Particles: Crash was triggered if there is not `textureFileName`section in particle plist file.
     [FIX]          Tests: TestCpp works with CMake on Windows.
     [FIX]          Tests: Sprites Performance Test has 3 new tests
     [FIX]          TextureCache: getTextureForKey and removeTextureForKey work as expected
     [FIX]          TextureCache: dumpCachedTextureInfo() -> getCachedTextureInfo()
     [FIX]          Websocket doesn't support send/receive data which larger than 4096 bytes.
     [FIX]          Windows: There will be some compilation errors when using x64 target on Windows.

cocos2d-x-3.0beta Jan.7 2014
[All]
     [NEW]          New label: shadow, outline, glow support
     [NEW]          AngelCode binary file format support for LabelBMFont
     [NEW]          New spine runtime support
     [NEW]          Add templated containers, such as `cocos2d::Map<>` and `cocos2d::Vector<>`
     [NEW]          TextureCache::addImageAsync() uses std::function<> as call back
     [NEW]          Namespace changed: network -> cocos2d::network, gui -> cocos2d::gui
     [NEW]          Added more CocoStudioSceneTest samples.
     [NEW]          Added UnitTest for Vector<T>, Map<K, V>, Value.
     [NEW]          AngelCode binary file format support for LabelBMFont.
     [NEW]          New renderer: Scene graph and Renderer are decoupled now.
     [NEW]          Upgrated Box2D to 2.3.0
     [NEW]          SChedule::performFunctionInCocosThread()
     [NEW]          Added tga format support again.
     [NEW]          Adds UnitTest for Template container and Value class
     [FIX]          A Logic error in ControlUtils::RectUnion.