@@ -75,8 +75,11 @@ protected:
     void mapBuffers();
 
     void drawBatchedQuads();
+
     //Draw the previews queued quads and flush previous context
     void flush();
+
+    void convertToWorldCoordiantes(V3F_C4B_T2F_Quad* quads, ssize_t quantity, const kmMat4& modelView);
 
     std::stack<int> _commandGroupStack;
     
